--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,42 @@ body{
 	/* azul background-color:#53bfe2;color:#2884a2;*/
 	/* amarillo background-color:#f8c54d;color:#ab8426;*/
 	/* morado background-color:#df6dc2;color:#9f3c85;*/
-	--porcentaje-1: 70%;
-	--porcentaje-2: 30%;
-	--porcentaje-3: 80%;
-	--porcentaje-4: 90%;
+}
+ /* ----------------------------------------------------------     */
+
+article,section, ul{
+	padding: 15px;
+}
+h1,h2,h3{
+	margin-bottom: 12px;
+}
+h1{
+	font-size: 30px;
+	text-transform: uppercase;
+}
+h2{
+	font-size: 24px;
+	text-transform: uppercase;
+}
+h3{
+	font-size: 22px;
+}
+h4{
+	font-size: 20px;
+}
+h5{
+	font-size: 18px;
+}
+h6{
+	font-size: 16px;
+}
+article{
+	padding-top: 100px;
 }
 
+.banner{
+	width: 100%;
+}
 .beaner{
 	height: 40vh;
 	background-image: url(../img/beaner-movil.png);
@@ -49,7 +79,8 @@ body{
 
 .nav-header{
 	width: 100%;
-	height: 40px;
+	height: 65px;
+	padding: 15px 5px;
 	background: var(--color-2);
 	position: fixed;
 	top: 0;
@@ -212,9 +243,6 @@ button > a:visited{
 	padding: 10px 10px 10px 10px;
 }
 
-.main{
-	
-}
 .aside{
 	margin: 0 10px 20px 10px;
 	padding: 20px 0;
