--- a/fonts/style.css
+++ b/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot?jjfne3');
-  src:  url('icomoon.eot?jjfne3#iefix') format('embedded-opentype'),
-    url('icomoon.ttf?jjfne3') format('truetype'),
-    url('icomoon.woff?jjfne3') format('woff'),
-    url('icomoon.svg?jjfne3#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?16fgc9');
+  src:  url('../fonts/icomoon.eot?16fgc9#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?16fgc9') format('truetype'),
+    url('../fonts/icomoon.woff?16fgc9') format('woff'),
+    url('../fonts/icomoon.svg?16fgc9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-menu:before {
+  content: "\e93c";
+}
 .icon-box:before {
   content: "\e900";
 }
