--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-*, *::before, *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 /* Variables de colores */
 :root{
 	--color-1: rgb(0, 152, 218); /*azul fuerte*/
@@ -15,6 +10,11 @@
 	--color-robot: #ea5080;
 }
 /**************************************************************/
+*, *::before, *::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 body{
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background-color: rgb(245, 245, 245);
@@ -24,13 +24,13 @@ h1{
 	font-size: 40px;
 	text-transform: uppercase;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 0;
 }
 h2{
 	font-size: 24px;
 	text-transform: uppercase;
 	text-align: center;
-	margin-bottom: 15px;
+	margin: 15px 0;
 }
 h3{
 	font-size: 22px;
@@ -67,23 +67,29 @@ a{
 header{
 	margin-top: 70px;
 }
+article{
+	background-color: rgb(255,255,255);
+	border-radius: 3px;
+	box-shadow: 0 4px 9px 0 rgba(67, 65, 79, 0.1);
+	transition: all 0.3s;
+	padding: 20px;
+}
+header:not(article){
+	margin: -20px -20px 0 -20px;
+}
 footer li{
 	list-style: none;
 }
 /**************************************************************/
-#navegacion{
+.navegacion{
     box-sizing: border-box;
 	width: 100vw;
 	height: 60px;
 	left: 0;
 	top: 0;
-	position: fixed;
-    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgb(71, 218, 255) 0%, rgb(41, 94, 107) 100%) repeat scroll 0 0;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
-}
-#logo img {
-    height: 60px;
-    margin-left: 0.6em;
+	position: absolute;
+    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgb(118, 211, 255) 0%, rgb(70, 187, 255) 100%) repeat scroll 0 0;
+ 
 }
 .boton-menu {
 	background-color: transparent;
@@ -104,25 +110,13 @@ footer li{
 	position: absolute;
     transition: height 0.4s ease-in-out 0s, background-color 2s ease 0s; /*El menú cambia su altura y su color de fondo mediante una transición suavizada al voover a su estado unicial*/
 }
-#navegacion:target .nav-items {
-    background: #ffffff none repeat scroll 0 0; 
-	height: 15.8em;
-	position: absolute;
-	top: 80px;
-    transition: height 0.4s ease-in-out 0s, background-color 0.9s ease 0s; /*El menú cambia su altura y su color de fondo mediante una transición suavizada al abrirse*/
-}
-/*Al hacer clic sobre el enlace que abre el menú éste desaparece*/
 .close { 
 	display:none;
-}    
-#navegacion:target .open {
-	display: none;
+}   
+.logo img {
+    height: 60px;
+    margin-left: 0.6em;
 }
-/* Al hacer clic sobre el enlace que abre el menú aparece el enlace .close que previamente estaba oculto*/
-#navegacion:target .close {
-	display: block;
-}
-/*Estilos menu*/
 .nav-items a {
     border-top: 2px dotted #dddbdb;
     color: #333;
@@ -131,13 +125,27 @@ footer li{
     line-height: 3em;
     margin: 0 1.3em;
 }
-ul.nav-items li:first-child a {
-    border-top: 2px solid transparent;
-}
 ul.nav-items li a span {
     border-left: 3px solid;
     height: 3.2em;
     padding: 0.4em 0.5em;
+}
+ul.nav-items li:first-child a {
+    border-top: 2px solid transparent;
+}
+.navegacion:target .nav-items {
+    background: #ffffff none repeat scroll 0 0; 
+	height: 15.8em;
+	position: absolute;
+	top: 80px;
+    transition: height 0.4s ease-in-out 0s, background-color 0.9s ease 0s;
+} 
+.navegacion:target .open {
+	display: none;
+}
+
+.navegacion:target .close {
+	display: block;
 }
 #item1 span {
     border-color: #ff6633;
@@ -156,21 +164,20 @@ ul.nav-items li a span {
 }
 /**************************************************************/
 .beaner{
-	height: 45vh;
+	height: 35vh;
 	width: 100vw;
+	top: 80px;
+	position: relative;
+	padding: 5vh 20px 0 20px;
 	margin-left: -20px;
-	background-image: url(/img/beaner-mobile.png);
-	background-color: black;
+	margin-bottom: 96px;
+	background-image: url(/img/banner-movil.png);
 	background-repeat: no-repeat;
-	color: var(--color-1);
-}
-.beaner-title{
-	color: var(--color-1);
-	height: 100%;
-	font-size: 3.4em;
+	color: var(--color-4);
+	font-size: 1.2em;
 	letter-spacing: .1em;
-	display:flex;
-	align-items: center;
+	display:inline-block;
+	text-align: center;
 }
 .beaner-articulo{
 	width: 100%;
@@ -204,17 +211,58 @@ ul.nav-items li a span {
 .image-block-medium{
 	width: 55%;
 }
-.productos-y-servicios .block:nth-child(1){
-	background-color: var(--color-informatic);
+.container-footer{
+	background-color: var(--color-4);
+	color: var(--color-3);
+	width: 100%;
+	height: auto;
+	padding: 10px 10px 30px 10px;
+	font-size: 1.2em;
+	position: absolute;
+	left: 0;
 }
-.productos-y-servicios .block:nth-child(2){
+.nav-footer{
+	width: 40%;
+	padding: 10px;
+	margin-left: 40px;
+}
+.blog{
+	margin-top: 120px;
+}
+
+.etiqueta{
+	font-weight: bold;
+	color: var(--color-robot);
+}
+.propuesta-de-valor h3{
+	text-align: center;
+}
+.propuesta-de-valor img{
+	width: 100%;
+}
+.contenido-de-interes img{
+	width: 100%;
+	height: 200px;
+	margin-bottom: 20px;
+}
+.contenido-de-interes h3{
+	font-size: 17px;
+	margin-bottom: 25px;
+}
+.block button{
+	font-size: 1.2em;
+	padding: 4px 8px;
+	display: block;
+	margin: 0 0 0 auto;
+	border-radius: 5px;
 	background-color: var(--color-electronic);
+	border: none; 
 }
-.productos-y-servicios .block:nth-child(3){
-	background-color: var(--color-desing);
+.contenido-de-interes a{
+	color: var(--color-3);
 }
-.productos-y-servicios .block:nth-child(4){
-	background-color: var(--color-robot);
+.nav-social-networks li{
+	display: inline-block;
 }
 .block:nth-child(1){
 	grid-area: a;
@@ -243,61 +291,19 @@ ul.nav-items li a span {
 .contenido-de-interes .block{
 	line-height: 0.1em;
 	background-color: var(--color-2);
+	color: var(--color-3);
 }
-.contenido-de-interes img{
-	width: 100%;
-	height: 200px;
-	margin-bottom: 20px;
+.productos-y-servicios .block:nth-child(1){
+	background-color: var(--color-informatic);
 }
-.contenido-de-interes h3{
-	font-size: 17px;
-	margin-bottom: 25px;
-}
-.block button{
-	font-size: 1.2em;
-	padding: 4px 8px;
-	display: block;
-	margin: 0 0 0 auto;
-	border-radius: 5px;
+.productos-y-servicios .block:nth-child(2){
 	background-color: var(--color-electronic);
-	border: none; 
 }
-.contenido-de-interes a{
-	color: var(--color-3);
+.productos-y-servicios .block:nth-child(3){
+	background-color: var(--color-desing);
 }
-.container-footer{
-	background-color: var(--color-4);
-	color: var(--color-3);
-	width: 100%;
-	height: auto;
-	padding: 10px 10px 30px 10px;
-	font-size: 1.2em;
-	position: absolute;
-	left: 0;
-}
-.nav-footer{
-	width: 40%;
-	padding: 10px;
-	margin-left: 40px;
-}
-.nav-social-networks li{
-	display: inline-block;
-}
-article{
-	margin-top: 120px;
-	background-color: rgb(255,255,255);
-	border-radius: 3px;
-	box-shadow: 0 4px 9px 0 rgba(67, 65, 79, 0.1);
-	transition: all 0.3s;
-	padding: 20px;
-}
-header:not(article){
-	margin: -20px -20px 0 -20px;
-}
-.etiqueta{
-	font-weight: bold;
-	color: var(--color-robot);
-	
+.productos-y-servicios .block:nth-child(4){
+	background-color: var(--color-robot);
 }
 
 /* Móviles en horizontal o tablet en vertical */
@@ -310,19 +316,21 @@ header:not(article){
 	}
 	/**********************************************/
 	.beaner{
-		width: 100vw;
 		height: 480px;
+		padding-top: 10vh;
 		margin-left: -40px;
-		background-image: url(../img/beaner.jpg);
+		background-image: url(/img/banner-tablet.png);
 	}
 	.beaner-title{
 		font-size: 3.8em;
-		justify-content: center;
 	}
 	.contenido{
 		grid-template-areas: 
 		"a a a a b b b b"
 		"c c c c d d d d";
+	}
+	.beaner p{
+		font-size: 1.2em;
 	}
 	.contenido-de-interes .contenido{
 		grid-template-areas: 
@@ -337,6 +345,10 @@ header:not(article){
 @media (min-width: 1024px){
 	body{
 		padding: 0 40px;
+	}
+	.beaner{
+		background-image: url(/img/banner-tabletH.png);
+		padding-top: 20vh;
 	}
 	.nav-items {
 		width: 40%;
@@ -357,12 +369,27 @@ header:not(article){
 	.boton-menu{
 		display: none;
 	}
+	.navegacion{
+		position: fixed;
+	}
 	.nav-items{
 		height: 80px;
 		top: 0;
 		right: 0;
 		left: unset;
 		text-align: center;
+	}
+	.nav-social-networks{
+		position: absolute;
+		right: 25px;
+		width: 15%;
+	}
+	.beaner{
+		height: 550px;
+		background-image: url(/img/banner.png);
+	}
+	.beaner p{
+		font-size: 1.6em;
 	}
 	.nav-items li{
 		display: inline-block;
@@ -371,25 +398,15 @@ header:not(article){
 	.nav-items a{
 		border: none;
 	}
-	.nav-items a:hover{
-		color: var(--color-3);
-	}
-	/**********************************************/
-	.beaner{
-		height: 550px;
-		background-image: url(../img/beaner.jpg);
-	}
-	.contenido-de-interes .contenido{
-		grid-template-areas: 
-		"a b c d e f g h";
-	}
 	article .contenido{
 		grid-template-areas: 
 		"a a b b c c d d";
+	}	
+	.contenido-de-interes .contenido{
+		grid-template-areas: 
+		"a a c d e f g h";
 	}
-	.nav-social-networks{
-		position: absolute;
-		right: 25px;
-		width: 15%;
+	.nav-items a:hover{
+		color: var(--color-3);
 	}
 }
