--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body{
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background-color: rgb(245, 245, 245);
 	padding: 0 20px;
+	overflow-x: hidden;
 }
 h1{
 	font-size: 40px;
@@ -96,6 +97,9 @@ footer a{
 }
 .footer-right{
 	margin: 0;
+}
+header > p{
+	padding: 0 15px;
 }
 
 /**************************************************************/
@@ -184,8 +188,12 @@ ul.nav-items li:first-child a {
 .beaner{
 	width: 100vw;
 	top: 80px;
+	left: 0em;
 	position: relative;
-	margin-bottom: 96px;
+}
+.beaner-title{
+	position: relative;
+	top: -35px;
 }
 header{
 	color: var(--color-4);
@@ -194,9 +202,7 @@ header{
 	display:inline-block;
 	text-align: center;
 }
-header > h1{
-	padding: 0 40px;
-}
+
 .beaner-articulo{
 	width: 100%;
 	margin-bottom: 20px;
@@ -336,18 +342,18 @@ header > h1{
 	body{
 		padding: 0 40px;
 	}
+
+	/**********************************************/
 	.nav-items {
 		width: 50%;
 	}
-	/**********************************************/
 	.beaner{
-		height: 480px;
-		padding-top: 10vh;
 		margin-left: -40px;
-		background-image: url(/img/banner-tablet.png);
 	}
 	.beaner-title{
-		font-size: 3.8em;
+		font-size: 3.2em;
+		position: relative;
+		top: -120px;
 	}
 	.contenido{
 		grid-template-areas: 
@@ -371,9 +377,8 @@ header > h1{
 	body{
 		padding: 0 40px;
 	}
-	.beaner{
-		background-image: url(/img/banner-tabletH.png);
-		padding-top: 20vh;
+	.beaner-title{
+		top: -230px;
 	}
 	.nav-items {
 		width: 40%;
@@ -411,7 +416,6 @@ header > h1{
 	}
 	.beaner{
 		height: 550px;
-		background-image: url(/img/banner.png);
 	}
 	.beaner p{
 		font-size: 1.6em;
